--- a/Notes/一些琐碎.md
+++ b/Notes/一些琐碎.md
@@ -1,6 +1,6 @@
 #### 重置数组
 
-```c++
+```cpp
 int a[maxn];
 // 按字节赋值，将数组 a 所有元素值置为 x
 // x 只能为 0 或 -1
@@ -56,6 +56,7 @@ scanf("%*d %*d %d", &n);
 
 
 
++ 当几个数连续乘最后取模时，可以将每个数字先取模，最后再取模，即%对于*具有结合律；
 + “乘以2”也可写成“<<1”，即“左移一位”。左移4位就是乘以 2^4。
 + 如果一个 key 不足以哈希，不妨用两个 key 。使用二维数组，“多维哈希”。<u>UVa213 紫书p83</u>
 + 在多数据的题目中，一个常见的错误是：在计算完一组数据后某些变量没有重置，影响到下组数据的求解。解决：把牵涉变量定义在循环内即可。
