--- a/Notes/一些琐碎.md
+++ b/Notes/一些琐碎.md
@@ -56,6 +56,7 @@ scanf("%*d %*d %d", &n);
 
 
 
++ 万能头文件 `include <bits/stdc++.h>`
 + 当几个数连续乘最后取模时，可以将每个数字先取模，最后再取模，即%对于*具有结合律；
 + “乘以2”也可写成“<<1”，即“左移一位”。左移4位就是乘以 2^4。
 + 如果一个 key 不足以哈希，不妨用两个 key 。使用二维数组，“多维哈希”。<u>UVa213 紫书p83</u>
