--- a/Notes/一些琐碎.md
+++ b/Notes/一些琐碎.md
@@ -1,45 +1,61 @@
+### 数组（序列）
+
 #### 重置数组
 
 ```cpp
 int a[maxn];
 // 按字节赋值，将数组 a 所有元素值置为 x
-// x 只能为 0 或 -1
-/* <cstring> */
-memset(a, x, sizeof(a)); 
+#include <cstring>
+memset(a, x, sizeof(a)); // x 只能为 0 或 -1
 /* 对于二维数组，sizeof 可以得出整个数组的大小 */
 
-// x 没有限制
 // fill 还可以用于其他序列，接受迭代器作为参数
-fill(a, a+maxn, x);
+fill(a, a+maxn, x); // x 没有限制
 
 // 另有——fill_n 接受重置个数：
 fill_n(vec.begin(), vec.size(), x);
 ```
 
+#### 拷贝数组
+
+```C++
+#include <cstring>
+memcpy(b, a, sizeof(int)*k); // 从数组a中拷贝k个元素到b 中
+memcpy(b, a, sizeof(a)); // 全部拷贝
+
+#include <algorithm>
+copy(vec.begin(), vec.end(), cp_vec.begin());
+```
+
+#### 求序列最大值
+
+```cpp
+#include <algorithm>
+int *b = max_element(a, a+5);
+cout << *b; // 返回的是最大值的指针
+```
+
+`reverse(v.begin(), v.end());` 倒置vector 或 数组
+
+`is_sorted(begin(a), end(a));` 判断是否是不降序列
+
+### 字符串
+
 #### 字符串IO
 
 ```C++
 char str[99];
-// 输出到字符串
-sprintf(str, "1 + 1 = %d", 2); 
+sprintf(str, "1 + 1 = %d", 2); // 输出到字符串
+sscanf(str, "%d", &n); // 从str中读取
 
-// 字符串作输入
-sscanf(str, "%d", &n);
-```
-
-#### 拷贝数组
-
-```C++
-// 从数组a中拷贝k个元素到b 中
-memcpy(b, a, sizeof(int)*k);
-memcpy(b, a, sizeof(a)); /* 全部拷贝 */
-```
-
-#### 重定向 IO 流
-
-```C++
-freopen("input.txt", "r", stdin);
-freopen("output.txt", "w", stdout); 
+// 类似的，C++中把 string 作为流读写：
+#include <sstream>
+string s("1");
+stringstream ss(s); // 利用string对象s创建字符串流 ss
+ss >> x1; // 可以将字符串的内容作为输出流
+ss << "11"; // 可以向流中写入内容，这将改变流的内容，但并不会影响s
+ss >> x2; // 使用写入流的内容作为输出流
+cout << s << " " << x1 << " " << x2; // 输出 1 1 11
 ```
 
 #### printf 和 scanf 的 * 修饰符
@@ -54,16 +70,136 @@ printf("The number is :%*d ", width, number);
 scanf("%*d %*d %d", &n);
 ```
 
+#### 截取 string 的子串
+
+```cpp
+string s2 = s.substr(4); // 从下标4开始一直到结束
+string s3 = s.substr(5, 3); // 从下标5开始，3个字符
+```
+
+#### string 和数据类型的转换 (c++11)
+
+```cpp
+#include <string>
+string s1 = to_string(123); // 将 int float double等数据类型转成字符串
+printf("%s\n", s1.c_str()); // string 转换为c风格的字符串char *
+
+// string 转换为其他数据类型
+int a = stoi("123"); // 转为int，其他的类似，顾名思义
+// stof stold stol stoll stoul stoull
+```
+
+`string s` 的读取可以用 `getline(can, s);`
+`char s[100]` 可以用 `cin.getline(s, 100);`
+它们两都读取掉行尾的换行符单不存入字符串s
+
+`string.find()` 返回的是下标的值，如果没有，返回 `string::npos`
+
+对c风格的字符串sort排序的`cmp(char a[], char b[])`函数要这样写：`strcmp(a,b)<0`
+
+### 位运算
+
+“乘以2”也可写成 `<<1`，即“左移一位”。左移 n 位就是乘以 2^n^
+
+C++ 的 bitset：
+
+```cpp
+bitset<8> bs; // 创建一个8位长的bitset
+bitset<8> bs2((unsigned long)131); // 创建另一个bitset
+bitset<8> bs3("1101"); // 通过字符串创建，高位补0
+// 显示 bitset，从高位开始输出
+for(int i=(int)bs.size(); i>=0; --i) cout << bs[i] << " ";
+
+// bitset 的一系列成员函数，带参数则操作指定位，不带参数则操作所有位
+b.set(); // 置位，所有位置1
+b.set(4); // 下标4处置1，下同
+b.reset(); // 复位，所有位复0
+b.flip(); // 逐位取反
+
+unsigned long a = b.to_ulong(); // 转换为unsigned long类型
+```
+
+### STL
+
+#### priority_queue
+
+默认“大”的优先级高，指定“小”的优先级高：`priority_queue<int, vector<int>, greater<int> > q;`
+
+对于自定义类型，需要重载 `<` 运算符（虽然默认“大”的优先级高，但源码是通过小于号比较大小）。也可以重载cmp函数并用struct包装：
+
+```cpp
+// fruit 是自定义类型
+struct cmp{
+    bool operator() (fruit f1, fruit f2){
+        return f1.price > f2.price;
+    }
+};
+priority_queue<fruit, vector<fruit>, cmp> q;
+```
+
+### 效率
+
+#### 重定向 IO 流
+
+```C++
+freopen("input.txt", "r", stdin);
+freopen("output.txt", "w", stdout); 
+```
+
+万能头文件 `include <bits/stdc++.h>`
+
+`<cctype>` 头文件，判断**字符范围**(char type)、转换大小写：
+
++ `isalpha` 字母；`islower` 小写字母；`isupper` 大写字母
++ `isalnum` 字母大小写+数字；`isdigit` 数字
++ `ispunct` 标点符号；`isblank` space 和 \t；`isspace` 空白：space、\t、\r、\n
++ `tolower()` `topper()` 将字符转为小写或大写
+
+当几个数连续乘最后取模时，可以将每个数字先取模，最后再取模，即**%对于*具有结合律**；
+
+如果一个 key 不足以哈希，不妨用两个 key 。使用二维数组，“多维哈希”。<u>UVa213 紫书p83</u>
+
+常用头文件：
+
+```cpp
+#include <cstdio>
+#include <cstdlib> // abs() rand()
+#include <cctype>
+#include <string>
+#include <iostream>
+#include <map> // multimap 也在这个头文件
+#include <unordered_map> // unordered_multimap 也在这个头文件
+#include <queue> // priority_queue 也在这个头文件中
+```
+
+### 易错
+
+`sort()` 是不稳定的排序！
+
+为了缓解浮点误差，可以将计算结果加上一个 EPS 后输出。EPS 通常取一个比最低精度还要小几个数量级的小实数，例如要保留3位小数时取 EPS 为 1e-6；
+
+浮点数通常不要直接`==`比较，`#define Equ(a,b) ((fabs((a)-(b)))<(eps))`
+
+特别关心`v.size()-1`，因为一系列`.size()`函数返回的都是unsigned long类型，如果`v.size()`为0，`0ul-1`溢出得到的是一个很大的数！
+
+在多数据的题目中，一个常见的错误是：在计算完一组数据后某些变量没有重置，影响到下组数据的求解。解决：把牵涉变量定义在循环内即可。
+
+题给a b区间可能顺序反了，要比较一下大小，`if(a>b) swap(a,b);`
 
 
-+ 万能头文件 `include <bits/stdc++.h>`
-+ 当几个数连续乘最后取模时，可以将每个数字先取模，最后再取模，即%对于*具有结合律；
-+ “乘以2”也可写成“<<1”，即“左移一位”。左移4位就是乘以 2^4。
-+ 如果一个 key 不足以哈希，不妨用两个 key 。使用二维数组，“多维哈希”。<u>UVa213 紫书p83</u>
-+ 在多数据的题目中，一个常见的错误是：在计算完一组数据后某些变量没有重置，影响到下组数据的求解。解决：把牵涉变量定义在循环内即可。
-+ 为了缓解浮点误差，可以将计算结果加上一个 EPS 后输出。EPS 通常取一个比最低精度还要小几个数量级的小实数，例如要保留3位小数时取 EPS 为 1e-6。
 
+### 杂项
 
+排序时对无效“节点”的处理，在结构体中加一个`bool flag=false`变量，有效节点标记为true：
+
+```cpp
+bool cmp(node a, node b){
+    if(a.flag==false || b.flag==false)
+        return a.flag > b.flag; // flag==false的无效节点都被换到后面
+    else
+        return a.value < b.value;
+}
+```
 
 #### 随机数
 
@@ -74,16 +210,8 @@ srand((unsigned)time(NULL));
 rand() % (b-a+1) + a; // 生成 [0,b-a] 内随机数
 ```
 
-
-
-`getline(cin, str)` 会读取一行中的所有内容，然后去掉结尾的换行符存储到 `str` 中。除了换行符其他所有内容都完全复制存储（包括空格）。
-
-
-
 使用类函数宏来代替简单的函数，有助于提高效率，尤其是在循环嵌套中。
 **搜集一些常用的方便的宏函数。**
-
-
 
 
 
@@ -100,3 +228,8 @@ rand() % (b-a+1) + a; // 生成 [0,b-a] 内随机数
 - 允许使用大写或小写的常量后缀，但在转换说明中只能用小写。
   56ll、56LL都表示long long 类型的常量；
   但以long long输出时，`%lld` √，`%LLd` ×
+
+
+
+
+
