--- a/Notes/一些算法.md
+++ b/Notes/一些算法.md
@@ -60,6 +60,7 @@ int gcd(int a, int b){
 另有——求最小公倍数：
 	a, b的最大公约数为 gcd(a, b) ，最小公倍数为 a * b / gcd(a, b)；
 	a*b 可能溢出，更恰当的写法是 a / gcd(a, b) * b 
+*/
 ```
 
 
@@ -71,13 +72,92 @@ int gcd(int a, int b){
 LL pow_mod(LL a, LL b, LL m) {
     LL ans = 1;
     while (b > 0) {
-        if (b & 1)
+        if (b & 1) // 如果b的二进制末尾为1，即b为奇数
             ans = ans * a % m;
         a = a * a % m;
-        /* b >> 1; 对long long慎用移位运算符 */
-        b /= 2;
+        b >>= 1; // b /= 2;
     }
     return ans;
+}
+```
+
+快速幂基于二分的思想：
+
+1. 如果b是奇数，那么有 a^b^ = a*a^b-1^
+2. 如果b是偶数，那么有 a^b^ = a^b/2^*a^b/2^
+
+### 大整数类
+
+```cpp
+#include <vector>
+using LL = long long;
+struct bigInt{
+    const static int WIDTH=4; // 大整数每一位的宽度
+    const static int BASE=1e4;// 大整数的“进制”，这里实际上是定义了10^4进制数
+    vector<int> v;
+    
+    // 构造函数
+    bigInt(){}
+    bigInt(LL n){
+        *this=n;
+    }
+    bigInt operator= (LL n){
+        v.clear();
+        do{
+            v.push_back(n%BASE);
+            n/=BASE;
+        }while(n);
+        return *this;
+    }
+    
+    // 大整数加大整数
+    bigInt operator+ (const bigInt& b) const {
+        bigInt temp; temp.v.clear();
+        for(int i=0, up=0; ; ++i){
+            // 如果两个大整数都遍历完了，而且没有进位，则加法完成
+            if(up==0 && i>=max(v.size(), b.v.size())) break;
+            
+            int he=up;
+            if(i<v.size()) he+=v[i];
+            if(i<b.v.size()) he+=b.v[i];
+            temp.v.push_back(he%BASE);
+            up=he/BASE;
+        }
+        return temp;
+    }
+    bigInt operator += (const bigInt& b) {
+        *this = *this + b;
+        return *this;
+    }
+    
+    // 大整数乘小整数
+    // 大整数乘小整数需要考虑小整数的范围来确定大整数的BASE值，保证相乘不溢出
+    bigInt operator* (const int& b) const {
+        bigInt temp; temp.v.clear();
+        for(int i=0, up=0; ; ++i){
+            // 和加法类似的思想，大整数每一位和小整数相乘，结果对BASE做除法，商作为进位，余数放在当前位。
+            // 如果大整数遍历完了，而且没有进位，则乘法完成
+            if(up==0 && i>=v.size()) break;
+            
+            int ji=up;
+            if(i<v.size()) ji += v[i]*b;
+            temp.v.push_back(ji % BASE);
+            up = ji/BASE;
+        }
+        return temp;
+    }
+    bigInt operator*= (const int& b){
+        return *this = *this*b;
+    }
+};
+// 输出大整数
+ostream& operator<< (ostream& out, const bigInt& b){
+    int i=b.v.size()-1;
+    cout << b.v[i];
+    while(--i>=0){
+        printf("%0*d", bigInt::WIDTH, b.v[i]);
+    }
+    return out;
 }
 ```
 
