素数判定-快速方法

--- a/Notes/一些算法.md
+++ b/Notes/一些算法.md
@@ -10,9 +10,8 @@ bool isPrim(int num){
     //不在6的倍数两侧的一定不是质数
     if(num%6 != 1 && num%6 != 5)
         return false;
-    int tmp = sqrt(num);
     //在6的倍数两侧的也可能不是质数
-    for(int i=5; i <= tmp; i+=6)
+    for(int i=5; i <= sqrt(num); i+=6)
         if(num%i==0 || num%(i+2)==0 )
             return false;
     //排除所有，剩余的是质数
