--- a/Notes/一些琐碎.md
+++ b/Notes/一些琐碎.md
@@ -186,6 +186,10 @@ freopen("output.txt", "w", stdout);
 
 题给a b区间可能顺序反了，要比较一下大小，`if(a>b) swap(a,b);`
 
+最好不要将有符号类型和无符号类型做运算！通常情况下会将有符号类型转换为无符号类型然后做运算，而如果有符号类型是一个负数则会产生意想不到的后果；
+
+> 无符号和有符号做运算时，首先像往常一样执行整形提升，如果结果类型匹配则无须进一步转换。否则，通常将小的类型转换为大的类型。比如通常情况下（取决于机器）`unsigned int` 比 `long` 能存储的数更大，因此`long`转换为`unsigned int` (有风险)；而`long long` 比 `unsigned int`更大，因此会转换为`long long`
+
 
 
 ### 杂项
