--- a/Notes/复习.md
+++ b/Notes/复习.md
@@ -14,6 +14,10 @@
 
 ## Leetcode
 
+### 数组
+
+常用方法：哈希表，双指针
+
 #### 53. 最大子数组和
 
 类似线段树的分治法求解：
@@ -21,3 +25,43 @@
 #### 88.合并两个有序数组
 
 双指针，但是反向双指针，降低空间复杂度。
+
+#### 350.两个数组的交集 Ⅱ
+
+要对两个数组哈希时，通常可以先对一个哈希，再遍历第二个，同时利用第一个数组的哈希。
+
+```cpp
+class Solution {
+public:
+    vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
+        if(nums1.size() > nums2.size()) return intersect(nums2, nums1);
+        map<int, int> m;
+        vector<int> res;
+        for(auto i : nums1) ++m[i];
+        for(auto i : nums2) if(m[i]) --m[i], res.push_back(i);
+        return res;
+    } 
+};
+```
+
+#### 122.卖股票的最佳时机 Ⅱ
+
+这题用贪心很巧妙，没想到我居然能用贪心做出来：
+
+```cpp
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int prices_min = prices[0];
+        int ans_sum = 0;
+        for (int day = 1; day < prices.size(); ++day) {
+            if (prices[day] > prices_min) {
+                ans_sum += prices[day] - prices_min;
+            }
+            prices_min = prices[day];
+        }
+        return ans_sum;
+    }
+};
+```
+
