--- a/Notes/一些算法.md
+++ b/Notes/一些算法.md
@@ -47,6 +47,25 @@ void Find(int a[], int n, int &min1, int &min2){
 
 
 
+### 二分查找-lower_bound
+
+```cpp
+int my_lower_bound(vector<int>& nums, int target) {
+    // 找到第一个不小于 target 的值的索引
+    int n = nums.size(), left = -1, right = n-1;
+
+    while (left+1 < right) {
+        int mid = (left + right) / 2;
+        if (nums[mid] < target) left = mid;
+        else right = mid;
+    }
+    if (nums[left+1] < target) return -1; // 如果最大的数比 target 还小
+    return left + 1;
+}
+```
+
+
+
 ### 最大公约数
 
 ```c++
